--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     ]
   ],
   "_from": "lib/node_modules/homebridge-mystrom",
-  "_id": "homebridge-mystrom@0.0.5",
   "_inCache": true,
   "_installable": true,
   "_location": "/homebridge-mystrom",
@@ -27,9 +26,7 @@
   "_shrinkwrap": null,
   "_spec": ".",
   "_where": "",
-  "author": {
-    "name": "johannrichard"
-  },
+  "author": "johannrichard",
   "dependencies": {
     "request": "^2.65.0",
     "polling-to-event": ">=2.0.2"
@@ -46,11 +43,13 @@
   "license": "ISC",
   "name": "homebridge-mystrom",
   "optionalDependencies": {},
-  "readme": "# homebridge-mystrom\n\nSupports myStrom (http://mystrom.ch) devices on the HomeBridge Platform and provides a real time polling for getting the \"On\" and power level characteristics to Homekit. Implements an \"Outlet\" service for HomeKit.",
-  "readmeFilename": "README.md",
   "repository": {
     "type": "git",
     "url": "git://https://github.com/johannrichard/homebridge-mystrom.git"
   },
-  "version": "0.0.5"
+  "version": "0.0.5",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
