--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
   "optionalDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git://https://github.com/johannrichard/homebridge-mystrom.git"
+    "url": "https://github.com/johannrichard/homebridge-mystrom.git"
   },
-  "version": "0.0.7",
+  "version": "0.0.8",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
