--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "johannrichard",
   "dependencies": {
     "request": "^2.65.0",
+	"request-debug": "^0.2.0",
     "polling-to-event": ">=2.0.2"
   },
   "description": "myStrom (http://mystrom.ch) polling plugin for homebridge: https://github.com/johannrichard/homebridge-mystrom",
@@ -38,7 +39,9 @@
     "node": ">=0.12.0"
   },
   "keywords": [
-    "homebridge-plugin"
+    "homebridge-plugin",
+    "mystrom",
+    "energy-control-switch"
   ],
   "license": "ISC",
   "name": "homebridge-mystrom",
@@ -47,7 +50,7 @@
     "type": "git",
     "url": "https://github.com/johannrichard/homebridge-mystrom.git"
   },
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
