Small refresh patch
* Implement support for the local REST API "Token"
* Add basic Config UI X support (accessory only)

--- a/sample-config.json
+++ b/sample-config.json
@@ -3,7 +3,8 @@
         {
             "accessory": "myStrom",
             "name": "myStrom WLAN Energy Control Switch",
-            "switch_address": "10.0.0.42"
+            "switch_address": "10.0.0.42",
+            "auth_token": "00112233445566778899AABBCCDDEEFF"
         }
     ],
     "bridge": {
