Mall update (metadata)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "keywords": [
     "homebridge-plugin",
     "mystrom",
-    "energy-control-switch"
+    "energy-control-switch",
+    "homebridge",
+    "homekit"
   ],
   "license": "ISC",
   "optionalDependencies": {},
